# bion

./: Cargo.toml  LICENSE  README.md  build.rs  data.nuon  flake.nix
.github/workflows/: release.yml
docs/: _config.yml  index.md  usage.md
src/: base.rs  bioreactor.rs  main.rs  model.rs  regressor.rs
src/ui/: app.rs  mod.rs  regression.rs  simulations.rs  tree.rs
