[package]
name = "bion"
version = "0.1.0"
edition = "2018"
authors = ["Tilen Gimpelj <tilen.gimpelj_ext@novartis.com>"]

[dependencies]
egui = "0.27.0"
egui_plot = "0.27.0"
eframe = { version = "0.27.0", features = ["default"] }
env_logger = { version = "0.11.3", default-features = false, features = [
        "auto-color",
        "humantime", ] }
rusoda = "0.1.0"
ode_solvers = "0.4.0"
